Fixed truncated icons.

--- a/static/css/themes/kansha.css
+++ b/static/css/themes/kansha.css
@@ -577,7 +577,6 @@ i.icon {
     .nav-menu .actions li a {
         display: inline-block;
         width: 28px;
-        height: 20px;
         overflow: hidden;
         padding: 0;
     }
